# opencv-panorama-stitcher-pro

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-ci.yml
scripts/: stitch.py
